# ai-agent-omnimise

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260419_0001_initial.py
app/: __init__.py  config.py  db.py  dependencies.py  logging_config.py  main.py  schemas.py
app/models/: __init__.py  scholarship.py  user.py
app/routers/: admin.py  scholarships.py  users.py
app/scrapers/: buddy4study.py  dto.py  http_util.py
app/services/: matcher.py  resume_parser.py  scrape_service.py
data/: seed_scholarships.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
